--- a/Swift/스위프트 프로그래밍/15. map, filter, reduce.md
+++ b/Swift/스위프트 프로그래밍/15. map, filter, reduce.md
@@ -20,8 +20,7 @@ protocol Collection
   
 ```swift
  
- // 변수.map { 변형시키는함수 }
- // 변형 시키는 함수: 
+ // func map<T>(_ transform: (Element) throws -> T) rethrows -> [T] 
  // 내부에서 컨테이너 값 변형 후 리턴된 타입으로 컨테이너를 생성하고 반환한다.
  
  
@@ -41,9 +40,60 @@ strings = numbers.map({ (number: Int) -> String in
   
   
   ## 15.2 filter
+  - 내부의 값을 걸러 추출하는 고차함수.<br>
+  - 특정 조건에 맞게 기존 콘텐츠를 변형하여 새로운 컨테이너에 값을 담아 반환한다.<br>
+  
+  ```swift
+   
+   // func filter(_ isIncluded: (Self.Element) throws -> Bool) rethrows -> [Self.Element] 
+   // isIncluded: 내부에서 기존 컨텐츠 값에 대한 Bool 타입 조건을 리턴한다.
+   
+   
+   let evenNumbers: [Int] = mappedNumbers.filter { (number: Int) -> Bool in
+        return number % 2 == 0 // 해당 조건을 만족한 요소를 리턴하여 최종적으로 배열을 리턴한다.
+    }
+   
+  ```
+  <br>
+  
+  
   ## 15.3 reduce 
   
+  - 컨테이너 내부의 컨텐츠를 하나로 합치는 기능을 수행하는 고차 함수.
+  - 배열이라면 배열의 모든 값을 전달인자로 전달 받은 클로저의 연산 결과로 합한다.
+  - reduce는 두가지로 나뉜다.
+  
+1) 클로저가 각 요소를 전달 받아 연산한 후 다음 클로저 수행을 위해 반환하면서 순환하는 형태
+            
+```swift
+             
+ // func reduce<Result>(_ initialResult: Result, _ nextPartialResult: (Result, Element) throws -> Result) rethrows -> Result
+ // initialResult: 초기 누적 값, 클로저가 처음 실행될 때 전달
+ // nextPartialResult: 누적값과 요소를 새로운 누적 값으로 결합하여 다음 클로저 호출에 사용하거나 반환한다.
  
+nummbers.reduce(0, {result: Int, next: Int) -> Int in
+    return result + next
+})
+ 
+```
+            
+            
+2) 컨테이너를 순환하며 클로저가 수행되나. 클로저가 따로 결과값을 리턴하지 않고 inout 매개변수에 직접 연산된다.
+        
+```swift
+             
+ // func reduce<Result>(_ initialResult: Result, _ nextPartialResult: (Result, Element) throws -> Result) rethrows -> Result
+ // initialResult: 초기 누적 값, 클로저가 처음 실행될 때 전달
+ // nextPartialResult: 누적값과 요소를 새로운 누적 값으로 결합하여 다음 클로저 호출에 사용하거나 반환한다.
+ 
+nummbers.reduce(into: 0, {result: inout Int, next: Int) -> Int in
+    return result += next
+})
+ 
+```            
+    
+            *inout? 
+            - 값이 아닌 참조로 전달한다. 
   
   
   
