--- a/Swift/스위프트 프로그래밍/18 상속.md
+++ b/Swift/스위프트 프로그래밍/18 상속.md
@@ -40,3 +40,16 @@
                 }
             }
 
+
+## 18.3.1 지정이니셜라이저와 편의 이니셜라이저
+* 지정 이니셜 라이저
+- 클래스의 주요 이니셜라이저
+- 클래스의 모든 프로퍼티는 초기화 해야할 의무가 있다.
+- 부모 클래스에서 지정 이니셜라이저가 역할을 다 한다면 자식은 지정 이니셜라이저를 구현할 필요가 없다.(보통 상속 받은 저장 프로퍼티 외에 다른 프로퍼티를 추가하지 않았을 경우. 이에 속함)
+
+* 편의 이니셜 라이저
+- 지정 이니셜라이저를 자신 내부에서 호출함.
+- 지정 이니셜라이저의 매개변수가 많아 일일이 전달인자를 전달하기 어렵거나 특정 목적에 사용하기 위함.
+                
+                // 앞에 convenience 키워드를 붙임.
+                convenience init(매개변수명) { 초기화 구문 }
