--- a/Swift/스위프트 프로그래밍/18 상속.md
+++ b/Swift/스위프트 프로그래밍/18 상속.md
@@ -4,12 +4,13 @@
 - 타클래스로 부터 상속을 받지 않은 클래스를 **기반 클래스**라고 함.<br> 
   
   ## 18.2.2 프로퍼티 재정의
-  - 부모의 인스턴스 프로퍼티, 타입 프로퍼티를 자식 클래스에서 용도에 맞게 재정의가 가능하다.<br>
-  - 단 프로퍼티의 재정의는 프로퍼티의 자체가 아닌. 프로퍼티의 getter, setter, property observer등을 재정의 하는것을 말한다. <br><br>
+  - 부모의 인스턴스 프로퍼티, 타입 프로퍼티를 자식 클래스에서 용도에 맞게 재정의가 가능하다. 
+  - 단 프로퍼티의 재정의는 프로퍼티의 자체가 아닌. 프로퍼티의 getter, setter, property observer등을 재정의 하는것을 말한다. <br> 
   - 상속받은 프로퍼티가 읽기 전용일때 이를 읽기/쓰기로 재정의 가능.
   - 상속받은 프로퍼티가 읽기/쓰기 프로퍼티일때 이를 쓰기만 재정의하는 것은 불가능.(super 이용.)
   
-   
+  
+    ```swift
             // 18.2.2 프로퍼티 재정의
             class Person {
                 var name: String = ""
@@ -41,15 +42,18 @@
             }
 
 
+
 ## 18.3.1 지정이니셜라이저와 편의 이니셜라이저
-* 지정 이니셜 라이저
+**지정 이니셜 라이저**
 - 클래스의 주요 이니셜라이저
 - 클래스의 모든 프로퍼티는 초기화 해야할 의무가 있다.
 - 부모 클래스에서 지정 이니셜라이저가 역할을 다 한다면 자식은 지정 이니셜라이저를 구현할 필요가 없다.(보통 상속 받은 저장 프로퍼티 외에 다른 프로퍼티를 추가하지 않았을 경우. 이에 속함)
 
-* 편의 이니셜 라이저
+**편의 이니셜 라이저**
 - 지정 이니셜라이저를 자신 내부에서 호출함.
 - 지정 이니셜라이저의 매개변수가 많아 일일이 전달인자를 전달하기 어렵거나 특정 목적에 사용하기 위함.
-                
+
+
+    ```swift
                 // 앞에 convenience 키워드를 붙임.
                 convenience init(매개변수명) { 초기화 구문 }
