--- a/Swift/스위프트 프로그래밍/18 상속.md
+++ b/Swift/스위프트 프로그래밍/18 상속.md
@@ -57,3 +57,23 @@
     ```swift
                 // 앞에 convenience 키워드를 붙임.
                 convenience init(매개변수명) { 초기화 구문 }
+   
+
+
+
+
+## 18.3.2 2단계 초기화
+- 2단계 초기화는 프로퍼티를 초기화 하기 전에 프로퍼티 값에 접근하는 것을 막는다.
+- 스위프트 컴파일러는 2단계 초기화를 오류 없이 처리하기 위해 안전확인을 진행한다. 
+ ```
+ 1. 자식클래스의 지정 이니셜라이저가 부모 클래스 지정 이니셜라이저를 호출하기 전에 자신의 프로퍼티를 모두 초기화했는지 확인함.
+ 2. 자식 클래스의 지정 이니셜라이저는 상속 받은 프로퍼티에 값을 할당하기 전에 반드시 부모 클래스의 이니셜라이저를 호출하애함.
+ 3. 편의 이니셜라이저는 자신의 클래스에 정의한 프로퍼티를 포함하여. 그 어떤 프로퍼티라도 값을 할당하기 전에 타 이니셜라이저를 호출해야 한다.
+ 4. 1단계를 마치기 전까진 인스턴스 메서드, 인스턴스 프로퍼티, self 인스턴스를 읽어올수 없다.
+ 
+ -> 즉. 1단계를 마치기 전에는 인스턴스가 불완전하다.
+  ```
+  
+  
+
+
