--- a/Swift/스위프트 프로그래밍/18 상속.md
+++ b/Swift/스위프트 프로그래밍/18 상속.md
@@ -74,6 +74,9 @@
  -> 즉. 1단계를 마치기 전에는 인스턴스가 불완전하다.
   ```
   
-  
 
-
+## 18.3.6 요구 이니셜라이저
+- 상속 받을시 반드시 재정의 해야하는 이니셜라이저는 required 를 붙인다.
+- 자동 상속이 되지 않는 상황이면 무조건 요구 이니셜라이저 구현 필요하다.
+- 부모의 일반 이니셜라이저를 자식의 요구 이니셜라이저로 변경시에는 required override를 명시해준다.
+- 편의 이니셜라이저도 required override로 명시 가능함.
