--- a/Swift/스위프트 프로그래밍/19 타입캐스팅.md
+++ b/Swift/스위프트 프로그래밍/19 타입캐스팅.md
@@ -6,6 +6,7 @@
   
     ```swift
             Int(value)
+    ```
   
   - 이는 이니셜라이저 구문이며, 실제로도 이니셜라이저로 진행된다.
   - Int의 구조체 내부에는 다양한 이니셜라이저가 정의되어 있다.
@@ -15,3 +16,24 @@
 
 - 스위프트의 타입캐스팅은 is 나 as로 표현한다.
 - is나 as로 타입을 확인하거나 값을 반환한다.
+
+## 19.3 데이터 타입 확인
+- is를 사용하여 인스턴스가 해당 클래스의 인스턴스거나 그 자식의 인스턴스라면 true
+- 모든 데이터 타입에 사용 가능하다.
+- 메타 타입 타입: 타입의 타입(클래스 구조체 열거형 프로토콜)
+         - 타입의 이름뒤에 .Type을 붙이면 메타타입이 됨
+        (ex 프로토콜의 메타타입? 프로토콜타입.Protocol)
+         - Someclass.self로 표현시 SomeClass 타입을 값으로 표현한것을 반환한다.
+
+``` swift
+
+let intType: Int.type = Int.self
+print(intType) // Int
+
+/ / 인스턴스 타입을 표현한 값을 알아보기 위해서는 type(of:) 사용
+let coffee: Coffee = Coffee()
+print(type(of:coffee)) //Coffee
+print(coffee.self) //Coffee
+
+
+```
