--- a/Swift/스위프트 프로그래밍/19 타입캐스팅.md
+++ b/Swift/스위프트 프로그래밍/19 타입캐스팅.md
@@ -21,9 +21,10 @@
 - is를 사용하여 인스턴스가 해당 클래스의 인스턴스거나 그 자식의 인스턴스라면 true
 - 모든 데이터 타입에 사용 가능하다.
 - 메타 타입 타입: 타입의 타입(클래스 구조체 열거형 프로토콜)
-         - 타입의 이름뒤에 .Type을 붙이면 메타타입이 됨
-        (ex 프로토콜의 메타타입? 프로토콜타입.Protocol)
-         - Someclass.self로 표현시 SomeClass 타입을 값으로 표현한것을 반환한다.
+
+- 타입의 이름뒤에 .Type을 붙이면 메타타입이 됨
+- (ex 프로토콜의 메타타입? 프로토콜타입.Protocol)
+- Someclass.self로 표현시 SomeClass 타입을 값으로 표현한것을 반환한다.
 
 ``` swift
 
@@ -37,3 +38,9 @@ print(coffee.self) //Coffee
 
 
 ```
+
+## 19.5 Any, AnyObject
+- Any는 함수, 구조체, 클래스 열거형 등 모든 타입의 인스턴스를 뜻함
+- AnyObect 클래스는 타입만 뜻함.
+- 해당 타입을 값으로 사용하기 위해선 타입 캐스팅이 필요하다.
+- Any나 AnyObject는 예기지 못한 오류가 발생할 확률이 높아 사용을 지양해야한다.
